--- a/src/ui/textarea/textarea.module.scss
+++ b/src/ui/textarea/textarea.module.scss
@@ -24,30 +24,20 @@
 
 .input_field_wrapper {
   position: relative;
-  width: 100%;
-  height: 36px;
+  height: 90px;
 }
-/* size */
-.sm_input {
-  height: 28px !important;
-}
-.md_input {
-  height: 32px !important;
-}
-.lg_input {
-  height: 36px !important;
-}
-.input_field {
+
+.textarea_field {
+  font-family: $inter;
   border: $space_1 solid $philippine_silver;
   height: 100%;
   width: 100%;
   border-radius: $space_3;
-  padding: $space_0 $space_12;
+  padding: $space_8 $space_12;
   box-sizing: border-box;
   background: transparent;
-  outline: $space_1 solid transparent;
   box-shadow: $space_0 $space_0 $space_0 $space_2 $white;
-  font-family: $inter;
+  resize: none;
   @include font($fs_13, $fw_regular, $dark_charcoal);
 
   &:focus {
@@ -58,28 +48,6 @@
   }
 }
 
-.password {
-  position: absolute;
-  border: none;
-  height: 100%;
-  width: 36px;
-  top: 0;
-  right: 0;
-  background: transparent;
-}
-.search_icon {
-  position: absolute;
-  border: none;
-  height: 100%;
-  width: 36px;
-  top: 0;
-  left: 0;
-  background: transparent;
-  @include flex(center, center);
-}
-.search_icon_padding {
-  padding-left: 30px !important;
-}
 .error_style {
   background: $lavender_blush;
   border-color: $vermilion;
@@ -100,62 +68,24 @@
   background: transparent;
   border: none;
   position: absolute;
-  right: 0;
-  top: 0;
-  height: 100%;
+  right: 16px;
+  top: 16px;
+  height: 30px;
   width: 30px;
-  @include flex(center, center);
   & svg {
     width: 20px;
     height: 17px;
   }
 }
-.prefix {
-  background: transparent;
-  border: none;
-  position: absolute;
-  left: 0px;
-  top: 0px;
-  height: 100%;
-  width: 30px;
-  @include flex(center, center);
-}
-.suffix {
-  background:transparent;
-  border: none;
-  position: absolute;
-  right: 0px;
-  top: 0px;
-  height: 100%;
-  width: 30px;
-  @include flex(center, center);
-}
-.suffix_icon_padding{
-  padding-left: 32px;
-}
-.prefix_icon_padding{
-  padding-right: 32px;
-}
+
 @include responsive(tablet) {
-  /* size */
-  .sm_input {
-    height: 32px !important;
-  }
-
-  .md_input {
-    height: 36px !important;
-  }
-
-  .lg_input {
-    height: 40px !important;
+  .input_field_wrapper {
+    height: 110px;
   }
 }
 
 @include responsive(laptop) {
-  .action_text {
-    cursor: pointer;
-  }
-  .password,
+  .action_text,
   .cross_icon {
     cursor: pointer;
   }
